--- a/src/main/resources/com/client/pop3imap4client/connectionScreen.fxml
+++ b/src/main/resources/com/client/pop3imap4client/connectionScreen.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="437.0" prefWidth="630.0" style="-fx-background-color: darkgray;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.pop3imap4client.ConnectionController">
       <BorderPane prefHeight="86.0" prefWidth="630.0" style="-fx-background-color: black;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <center>
@@ -48,11 +49,17 @@
                         <Insets bottom="20.0" />
                      </VBox.margin>
                   </TextField>
-                  <TextField fx:id="passwordText" prefHeight="30.0" prefWidth="262.0" style="-fx-background-color: white;">
-                     <VBox.margin>
+                <PasswordField fx:id="passwordText" prefHeight="30.0" prefWidth="262.0" style="-fx-background-color: white;">
+                    <VBox.margin>
                         <Insets bottom="20.0" />
-                     </VBox.margin>
-                  </TextField>
+                    </VBox.margin>
+                </PasswordField>
+                <TextField fx:id="visiblePasswordText" prefHeight="30.0" prefWidth="262.0"
+                           style="-fx-background-color: white;" visible="false" managed="false">
+                    <VBox.margin>
+                        <Insets bottom="20.0" />
+                    </VBox.margin>
+                </TextField>
                   <Label fx:id="errorText" prefHeight="32.0" prefWidth="280.0" style="-fx-text-fill: red; -fx-font-weight: bold;" text="Error" visible="false" />
          <Button fx:id="connectButton" alignment="CENTER" contentDisplay="CENTER" maxWidth="100.0" mnemonicParsing="false" prefHeight="40.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-font-weight: bold;" text="Connect">
             <VBox.margin>
