--- a/src/main/resources/com/client/pop3imap4client/connectionScreen.fxml
+++ b/src/main/resources/com/client/pop3imap4client/connectionScreen.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,7 +11,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.PasswordField?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="437.0" prefWidth="630.0" style="-fx-background-color: darkgray;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.pop3imap4client.ConnectionController">
       <BorderPane prefHeight="86.0" prefWidth="630.0" style="-fx-background-color: black;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <center>
@@ -30,14 +30,14 @@
          </HBox>
       </top>
       </BorderPane>
-      <HBox layoutX="99.0" layoutY="161.0" prefHeight="194.0" prefWidth="350.0" AnchorPane.leftAnchor="99.0" AnchorPane.rightAnchor="99.0" AnchorPane.topAnchor="161.0">
-            <VBox prefHeight="194.0" prefWidth="70.0">
+      <HBox layoutX="70.0" layoutY="161.0" prefHeight="194.0" prefWidth="350.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="128.40000000000003" AnchorPane.topAnchor="161.0">
+            <VBox prefHeight="194.0" prefWidth="107.0">
                   <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="30.0" prefWidth="177.0" style="-fx-font-weight: bold;" text="Gmail:">
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
                   </Label>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="30.0" prefWidth="176.0" style="-fx-font-weight: bold;" text="Password:">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="30.0" prefWidth="102.0" style="-fx-font-weight: bold;" text="Access Code:">
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
@@ -49,13 +49,12 @@
                         <Insets bottom="20.0" />
                      </VBox.margin>
                   </TextField>
-                <PasswordField fx:id="passwordText" prefHeight="30.0" prefWidth="262.0" style="-fx-background-color: white;">
+                <PasswordField fx:id="accessCode" prefHeight="30.0" prefWidth="262.0" style="-fx-background-color: white;">
                     <VBox.margin>
                         <Insets bottom="20.0" />
                     </VBox.margin>
                 </PasswordField>
-                <TextField fx:id="visiblePasswordText" prefHeight="30.0" prefWidth="262.0"
-                           style="-fx-background-color: white;" visible="false" managed="false">
+                <TextField fx:id="visiblePasswordText" managed="false" prefHeight="30.0" prefWidth="262.0" style="-fx-background-color: white;" visible="false">
                     <VBox.margin>
                         <Insets bottom="20.0" />
                     </VBox.margin>
