configured authentication for app password on gmail

--- a/src/main/resources/com/client/pop3imap4client/serverChoice.fxml
+++ b/src/main/resources/com/client/pop3imap4client/serverChoice.fxml
@@ -90,4 +90,18 @@
                </HBox.margin>
             </Label>
       </HBox>
+   <HBox alignment="TOP_CENTER" layoutX="184.0" layoutY="337.0" prefHeight="42.0" prefWidth="431.0">
+      <children>
+         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="150.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="not implemented">
+            <HBox.margin>
+               <Insets right="20.0" />
+            </HBox.margin>
+         </Label>
+         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="150.0" style="-fx-text-fill: black; -fx-font-weight: bold;" text="not implemented">
+            <HBox.margin>
+               <Insets right="20.0" />
+            </HBox.margin>
+         </Label>
+      </children>
+   </HBox>
 </AnchorPane>
