--- a/src/main/resources/com/client/pop3imap4client/connectionScreen.fxml
+++ b/src/main/resources/com/client/pop3imap4client/connectionScreen.fxml
@@ -37,7 +37,7 @@
                         <Insets bottom="20.0" />
                      </VBox.margin>
                   </Label>
-                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="30.0" prefWidth="102.0" style="-fx-font-weight: bold;" text="Access Code:">
+                  <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="30.0" prefWidth="102.0" style="-fx-font-weight: bold;" text="App password:">
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
@@ -49,7 +49,7 @@
                         <Insets bottom="20.0" />
                      </VBox.margin>
                   </TextField>
-                <PasswordField fx:id="accessCode" prefHeight="30.0" prefWidth="262.0" style="-fx-background-color: white;">
+                <PasswordField fx:id="appPassword" prefHeight="30.0" prefWidth="262.0" style="-fx-background-color: white;">
                     <VBox.margin>
                         <Insets bottom="20.0" />
                     </VBox.margin>
